// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > analysis should handle clear isochrone results 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochrone": null,
  "isochroneLonLat": null,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle default state 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle enter analysis mode 1`] = `
Object {
  "active": true,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle exit analysis mode 1`] = `
Object {
  "active": false,
  "comparisonTravelTimeSurface": null,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "projectApplicationWarnings": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
  "travelTimeSurface": null,
}
`;

exports[`reducers > analysis should handle set active regional analyses 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": "project id",
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": "comparison id",
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle set active variant 1`] = `
Object {
  "active": false,
  "activeVariant": 21,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle set comparison in progress 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle set comparison modifications 1`] = `
Object {
  "active": false,
  "comparisonBundleId": "COMPARISON BUNDLE ID",
  "comparisonModifications": Array [
    "MODIFICATIONS",
  ],
  "comparisonProjectId": "COMPARISON PROJECT ID",
  "comparisonVariant": 16,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle set comparison project 1`] = `
Object {
  "active": false,
  "comparisonBundleId": "COMPARISON BUNDLE ID",
  "comparisonModifications": null,
  "comparisonProjectId": "COMPARISON PROJECT ID",
  "comparisonVariant": 16,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle set isochrone cutoff 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle set isochrone fetch status 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": true,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle set isochrone lonlat 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneLonLat": 123,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle set profile request 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 24321,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 25220,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle set project application errors 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": Array [
    Object {
      "messages": Array [
        "Headway is not greater than zero.",
      ],
      "modificationId": "Add Trip Pattern",
      "title": "Error while applying the modification entitled 'Add Trip Pattern'.",
    },
  ],
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "selectedBookmark": null,
}
`;

exports[`reducers > analysis should handle set regional analysis grids 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxRides": 4,
    "maxTripDurationMinutes": 60,
    "monteCarloDraws": 200,
    "percentiles": Array [
      5,
      25,
      50,
      75,
      95,
    ],
    "toTime": 32400,
    "transitModes": "BUS,TRAM,RAIL,SUBWAY",
    "travelTimePercentile": 50,
    "variantIndex": 0,
    "walkSpeed": 1.3888888888888888,
  },
  "projectApplicationErrors": null,
  "regional": Object {
    "_id": null,
    "breaks": undefined,
    "comparisonGrid": Object {
      "which": "COMPARISON GRID",
    },
    "comparisonId": null,
    "differenceGrid": Object {
      "which": "DIFFERENCE_GRID",
    },
    "grid": Object {
      "which": "GRID",
    },
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": Object {
      "which": "PROBABILITY GRID",
    },
  },
  "selectedBookmark": null,
}
`;
